--- a/AsyncSuffix/AsyncSuffix.csproj
+++ b/AsyncSuffix/AsyncSuffix.csproj
@@ -7,12 +7,15 @@
     <ProjectGuid>{752FF9EC-357F-4272-92AD-E4DAB15312C1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AsyncSuffix</RootNamespace>
-    <AssemblyName>AsyncSuffix</AssemblyName>
+    <RootNamespace>Sizikov.AsyncSuffix</RootNamespace>
+    <AssemblyName>Sizikov.AsyncSuffix</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>17dbd158</NuGetPackageImportStamp>
+  </PropertyGroup>
+  <PropertyGroup>
+    <HostFullIdentifier>ReSharperPlatformVs12Plugins</HostFullIdentifier>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -153,11 +156,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsiderUsingConfigureAwaitBulbItem.cs" />
-    <Compile Include="ConsiderUsingConfigureAwaitQuickFix.cs" />
-    <Compile Include="Daemon\ConsiderUsingAsyncSuffixAnalyzer.cs" />
-    <Compile Include="Daemon\ConsiderUsingAsyncSuffixHighlighting.cs" />
-    <Compile Include="Daemon\TaskExtensions.cs" />
+    <Compile Include="ConsiderUsingAsyncSuffixBulbItem.cs" />
+    <Compile Include="ConsiderUsingAsyncSuffixQuickFix.cs" />
+    <Compile Include="Analyzer\ConsiderUsingAsyncSuffixAnalyzer.cs" />
+    <Compile Include="Analyzer\ConsiderUsingAsyncSuffixHighlighting.cs" />
+    <Compile Include="Analyzer\TaskExtensions.cs" />
     <Compile Include="ZoneMarker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
