--- a/AsyncSuffix/AsyncSuffix.nuspec
+++ b/AsyncSuffix/AsyncSuffix.nuspec
@@ -2,21 +2,21 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>Sizikov.AsyncSuffix</id>
-        <version>1.0.3</version>
+        <version>$version$</version>
         <title>AsyncSuffix</title>
         <authors>Anton Sizikov</authors>
         <owners>AntonSizikov</owners>
         <projectUrl>https://github.com/asizikov/AsyncSuffix</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Task returning method's naming analyzer. Async methods should have 'Async' suffix.</description>
-        <releaseNotes>ReSharper 9.2</releaseNotes>
+        <releaseNotes>ReSharper 10</releaseNotes>
         <language>en-US</language>
         <tags>async method, namming, task</tags>
         <dependencies>
-            <dependency id="Wave" version="[3.0]" />
+            <dependency id="Wave" version="[4.0]" />
         </dependencies>
     </metadata>
     <files>
-        <file src="..\AsyncSuffix\bin\Release\Sizikov.AsyncSuffix.dll" target="dotFiles" />
+        <file src="bin\Release\Sizikov.AsyncSuffix.dll" target="dotFiles" />
     </files>
 </package>
