--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ install:
 
 before_build:
  - ps: nuget restore
- - ps: gitversion /l console /output buildserver /updateassemblyinfo AssemblyInfo.cs /b (get-item env:APPVEYOR_REPO_BRANCH).Value
+ - ps: gitversion /l console /output buildserver /updateassemblyinfo AsyncSuffix/Properties/AssemblyInfo.cs /b (get-item env:APPVEYOR_REPO_BRANCH).Value
 
 build:
   project: AsyncSuffix/AsyncSuffix.csproj
