--- a/AsyncSuffix/AsyncSuffix.nuspec
+++ b/AsyncSuffix/AsyncSuffix.nuspec
@@ -2,16 +2,16 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>Sizikov.AsyncSuffix</id>
-        <version>1.1.0-sdk10</version>
+        <version>1.1.0-sdk10-2</version>
         <title>AsyncSuffix</title>
         <authors>Anton Sizikov</authors>
         <owners>AntonSizikov</owners>
         <projectUrl>https://github.com/asizikov/AsyncSuffix</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Task returning method's naming analyzer. Async methods should have 'Async' suffix.</description>
-        <releaseNotes>ReSharper 10</releaseNotes>
+        <releaseNotes>ReSharper 10 support</releaseNotes>
         <language>en-US</language>
-        <tags>async method, namming, task</tags>
+        <tags>async method, naming, task</tags>
         <dependencies>
             <dependency id="Wave" version="[4.0]" />
         </dependencies>
