--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,13 +15,14 @@ before_build:
 build:
   project: AsyncSuffix.sln
   verbosity: minimal
-  publish_nuget: true
+  #publish_nuget: true
 test: off
 nuget:
   disable_publish_on_pr: true
 
 after_build: 
-  - ps: nuget pack AsyncSuffix/AsyncSuffix.nuspec
+  - ps: nuget pack AsyncSuffix/AsyncSuffix.nuspec -Version %appveyor_build_version%
+  - ps: appveyor PushArtifact Sizikov.AsyncSuffix.%appveyor_build_version%.nupkg
 
 artifacts:
   - path: sources/**/bin/*.nupkg
