--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,32 +1,4 @@
-configuration: Release
-platform: Any CPU
-cache:
-  - packages -> **\packages.config
-  - C:\ProgramData\chocolatey\bin -> appveyor.yml
-  - C:\ProgramData\chocolatey\lib -> appveyor.yml
-
-install:
-  - choco install gitversion.portable -y
-
-before_build:
- - ps: nuget restore
- - ps: gitversion /l console /output buildserver /updateassemblyinfo /b (get-item env:APPVEYOR_REPO_BRANCH).Value
-
-build:
-  project: AsyncSuffix.sln
-  verbosity: minimal
-  #publish_nuget: true
-test: off
-artifacts:
-  - path: sources/**/bin/*.nupkg
-
-deploy:
-  provider: NuGet
-  server: https://resharper-plugins.jetbrains.com
-  api_key: 
-    secure: RjiHK3Oxp74LUrI1/vmc2S36zOSRLxFM1Eq0Qn4hixWiou11jFqUbW2ukMNXrazP
-  artifact: /.*\.nupkg/
-  on:
-    branch:
-      - master
-      - develop
+branches:
+  - master
+  - develop
+  - feature/conditional-build
