project and verbosity

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,10 @@
   before_build:
     - ps: nuget restore
     - ps: gitversion /l console /output buildserver /updateassemblyinfo /b (get-item env:APPVEYOR_REPO_BRANCH).Value
+  build:
+    project: AsyncSuffix.sln
+    verbosity: minimal
+  test: off
 - 
   branches:
     only:
