pack after build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,3 +35,9 @@
   before_build:
     - ps: nuget restore
     - ps: gitversion /l console /output buildserver /updateassemblyinfo /b (get-item env:APPVEYOR_REPO_BRANCH).Value
+  build:
+    project: AsyncSuffix.sln
+    verbosity: minimal
+  test: off
+  after_build:
+    - nuget pack AsyncSuffix/AsyncSuffix.nuspec
