--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,4 +40,4 @@
     verbosity: minimal
   test: off
   after_build:
-    - nuget pack AsyncSuffix/AsyncSuffix.nuspec
+    - nuget pack AsyncSuffix/AsyncSuffix.nuspec -version (get-item env:GitVersion_InformationalVersion).Value
