--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,9 @@
     - C:\ProgramData\chocolatey\lib -> appveyor.yml
   install:
     - choco install gitversion.portable -y
-
+  environment:
+    resharper_nuget_api_key:
+      secure: RjiHK3Oxp74LUrI1/vmc2S36zOSRLxFM1Eq0Qn4hixWiou11jFqUbW2ukMNXrazP
   before_build:
     - ps: nuget restore
     - ps: gitversion /l console /output buildserver /updateassemblyinfo /b (get-item env:APPVEYOR_REPO_BRANCH).Value
@@ -19,6 +21,9 @@
     project: AsyncSuffix.sln
     verbosity: minimal
   test: off
+  after_build:
+    - ps: nuget pack AsyncSuffix/AsyncSuffix.nuspec -Version (get-item env:GitVersion_InformationalVersion).Value
+    - ps: nuget push *.nupkg -ApiKey (get-item env:resharper_nuget_api_key).Value -Source https://resharper-plugins.jetbrains.com
 - 
   branches:
     only:
