--- a/AsyncSuffix/project.json
+++ b/AsyncSuffix/project.json
@@ -1,15 +1,12 @@
 ﻿{
   "dependencies": {
-    "Antlr2.Tools": "2.7.6.4",
-    "JetBrains.Annotations": "10.0.0",
-    "JetBrains.Mono.Posix": "0.1.0",
-    "JetBrains.ReSharper.SDK": "10.1.20160212.101132-Eap2",
-    "Mono.Posix": "4.0.0"
+    "JetBrains.Annotations": "10.1.2-eap",
+    "JetBrains.ReSharper.SDK": "10.1.20160212.101132-Eap2"
   },
   "frameworks": {
     "net4": {}
   },
   "runtimes": {
-    "win": {}
+    "win": { }
   }
 }
