--- a/AsyncSuffix/AsyncSuffix.nuspec
+++ b/AsyncSuffix/AsyncSuffix.nuspec
@@ -10,8 +10,8 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Task returning method's naming analyzer. Async methods should have 'Async' suffix.</description>
         <releaseNotes>
-		&#8226;Improved suggestions;
-		&#8226;Custom async types support;
+		&#8226;Performance improvements;
+		&#8226;Interface implementation excluded from analysis;
 	</releaseNotes>
         <language>en-US</language>
         <tags>async method, naming, task</tags>
