--- a/AsyncSuffix.nuspec
+++ b/AsyncSuffix.nuspec
@@ -15,7 +15,7 @@
         <language>en-US</language>
         <tags>async method, naming, task</tags>
         <dependencies>
-            <dependency id="Wave" version="[6.0]" />
+            <dependency id="Wave" version="[6.0,7.0)" />
         </dependencies>
     </metadata>
     <files>
