--- a/AsyncSuffix.nuspec
+++ b/AsyncSuffix.nuspec
@@ -13,7 +13,7 @@
             &#8226;ReSharper 2016.3 support;
     </releaseNotes>
         <language>en-US</language>
-        <tags>async method, naming, task</tags>
+        <tags>async method  naming  task</tags>
         <dependencies>
             <dependency id="Wave" version="[7.0,8.0)" />
         </dependencies>
