--- a/src/AsyncSuffix/AsyncSuffix.csproj
+++ b/src/AsyncSuffix/AsyncSuffix.csproj
@@ -76,7 +76,9 @@
       <Version>11.1.0</Version>
     </PackageReference>
     <PackageReference Include="JetBrains.ReSharper.SDK">
-      <Version>2018.2.0</Version>
+      <Version>2018.3.0</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
